[tool.poetry]
name = "discord-ext-ui"
version = "0.1.0"
description = ""
authors = ["sushi-chaaaan <sushi_code@outlook.jp>"]
readme = "README.md"
# packages = [{ include = "discord_ext_ui" }]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "3.7.4.post0"
discord-py = { git = "https://github.com/Rapptz/discord.py.git", rev = "master", extras = [
    "voice",
    "speed",
] }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
