[tool.poetry]
name = "discord-ext-ui"
version = "0.1.0"
description = ""
authors = ["sushi-chaaaan <sushi_code@outlook.jp>"]
readme = "README.rst"
packages = [{ include = "discord/ext/ui" }]

[tool.poetry.dependencies]
python = "^3.8.2"
aiohttp = "3.7.4.post0"
discord-py = { git = "https://github.com/Rapptz/discord.py.git", rev = "master", extras = [
    "voice",
    "speed",
] }


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
flake8 = "^6.0.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
